baseProject/src/main/webapp/css/main.css
/* ... */
button {
	margin-right: 20px;
}

.validationErrorText {
	color: red;
	background-color: #fee2ef;
	border-radius: 5px;
	padding: 5px 10px;
	border-radius: 5px;
	margin-right: 10px;
	vertical-align: top;
}

.clearBoth {
	clear: both;
}

.confirmation-message {
	border-style: solid;
	width: 20%;
	margin: auto;
	padding: 10px 20px;
	border-color: #030303;
        background-color: rgba(255,255,255,0.7);
        border-radius: 4px;
}

.negative-message {
	border-style: solid;
	width: 20%;
	margin: auto;
	padding: 10px 20px;
	border-color: #030303;
        background-color: rgba(255,255,255,0.7);
        border-radius: 4px;
}

.confirmation-message img {
	width: 30px;
	margin-bottom: 20px;
}

.negative-message img {
	width: 30px;
	margin-bottom: 20px;
}

/* -------------------------------------------------------------------- */
/* Header & Footer */

header {
	color: black;
	background: #ffffff;
	position: fixed;
	top: 0px;
	left: 0px;
	right: 0px;
	height: 70px;
	z-index: 1;
	min-width: 1100px;
}

header a {
	text-decoration: none;
	color: black;
	opacity: 1.0;
}

header h1 {
	margin-top: 10px;
	margin-left: 10px;
	font-size: 2.8em;
	opacity: 1.0;
}

header h1 a {
	color: black;
	opacity: 1.0;
}

header ul {
	padding: 0;
	list-style: none;
	opacity: 1.0;
}

header ul li {
	float: right;
	width: 120px;
	text-align: center;
	line-height: 21px;
	margin-top: 20px;
	text-align: center;
	opacity: 1.0;
}

#profile_picture {
	width: 170px;
	margin-top: 0px;
	opacity: 1.0;
}

#profile_picture_editPage {
	float: left;
	width: 340px;
	margin-top: 0px;
	opacity: 1.0;
}

#profile_picture_publicProfile {
	float: left;
	width: 340px;
	margin-top: 0px;
	opacity: 1.0;
}

#profile_picture img {
	width: 60px;
	height: 60px;
	float: left;
	opacity: 1.0;
}

#profile_picture a {
	height: 60px;
	opacity: 1.0;
}

#profile_picture .text {
	float: center;
	height: 100%;
	margin-top: 10px;
	margin-right: 10px;
	opacity: 1.0;
}

#profile_picture ul li {
	margin-top: 0px;
	float: none;
	width: 100%;
	opacity: 1.0;
}

#profile_picture ul li a {
	height: 25px;
	text-align: left;
	opacity: 1.0;
}

header ul li a {
	display: block;
	padding: 5px 10px;
	color: #000000;
	text-decoration: none;
	opacity: 1.0;
}

header ul li a:hover {
	color: #000000;
	background: #999999;
	opacity: 1.0;
}

/* it does hide the drop down menu */
header ul li ul {
	display: none;
	opacity: 1.0;
}

/*only when you hover over the unordered list item -> dropdown visible */
header ul li:hover ul {
	display: block;
	opacity: 1.0;
        background-color: rgba(255,255,255,0.7);
}

header nav {
	display: block;
	float: right;
	padding: 0px 15px;
	font-size: 1.3em;
	opacity: 1.0;
}

/* Horizontal Menu */
header nav ul li {
    font-size: 0.9em;
}
.admin_menu {
    /*font-size: 0.8em;*/
    width: auto;
    padding: 0 5px;
	opacity: 1.0;
}
.admin_menu.right {
    border-right: 1px solid black;
    padding-right: 15px;
	opacity: 1.0;
}

footer {
	color: black;
	background: #ffffff;
	position: fixed;
	bottom: 0px;
	left: 0px;
	right: 0px;
	height: 25px;
	text-align: center;
}

footer nav {
	margin-top: 8px;
	opacity: 1.0;
}

footer .link {
	color: #000000;
	opacity: 1.0;
}

footer .link:hover {
	color: #999999;
	opacity: 1.0;
}

footer nav ul li {
	display: inline-block;
	float: center;
	padding: 0px 15px;
	opacity: 1.0;
}

/* -------------------------------------------------------------------- */
/* ----------------------------Individual pages------------------------ */
/* -------------------------------------------------------------------- */

/* -------------------------------------------------------------------- */
/* login.jsp */
.test-users {
	margin-left: 30px;
	line-height: 1.5;
}

/* about.jsp*/
#about {
  position: fixed;
  top: 50%;
  left: 50%;
  margin-top: -365px;
  margin-left: -486px;
}

/* -------------------------------------------------------------------- */
/* placeAd.jsp */
#placeAdForm {
	width: 900px;
	margin: auto;
}

#uploaded-pictures {
	width: 700px;
}

#uploaded-pictures td {
	text-align: center;
}

#uploaded-pictures td:first-child {
	text-align: left;
}

#uploaded-pictures td:last-child {
	cursor: pointer;
}

#name-column {
	width: 75%;
	text-align: left;
}

.placeAdTable {
	width: 80%;
}

#placeAdForm fieldset:first-child label { /* That's a bit ridiculous, but the original HTML is really... weird... */
    display: block;
    margin-bottom: 4px;
}
#placeAdForm .ot-direct, #placeAdForm .ot-auction {
    display: none;
}
/* -------------------------------------------------------------------- */
/* signup.jsp */
#signupForm {
	width: 350px;
}

.signupDescription{
	vertical-align: top;
}
/* -------------------------------------------------------------------- */
/* search.jsp */
#searchForm {
	width: 900px;
}

/* -------------------------------------------------------------------- */
/* editProfile.jsp */
.editProfileTable input {
	width: 30%;
	font-size: 0.8em;
}

.editProfileTable textarea {
	font-size: 0.9em;
}

.editProfileTable {
	width: 80%;
	margin-top: 2px;
	font-size: 1.4em;
}

.spacingTable {
	padding: 10px;
}

/* -------------------------------------------------------------------- */
/* searchAd.jsp */
#searchDiv {
	border-style: none;
	background-color: rgba(255,255,255,0.7);
	padding: 15px;
}


/* -------------------------------------------------------------------- */
/* results.jsp */
#resultTable {
	border-radius: 5px;
	background-color: #030303;
}

#resultTable tr {
	background-color: white;
}

#resultTable th {
	background-color: #030303;
	color: white;
	padding: 5px;
}

#resultTable td {
	padding: 5px;
}

#resultTable a {
	text-decoration: none;
}

#userPicDiv {
	float: left;
	margin-top: 10px;
}

#userTextDiv {
	float: left;
	padding-left: 30px;
	margin-top: 10px;
}

#filterDiv {
	width: 35%;
	margin-top: 30px;
	float: right;
	padding: 10px;
	margin-top: 10px;
	border-style: solid;
	border-color: #030303;
	border-width: 3px;
	border-radius: 10px;
	background-color: rgba(255,255,255,0.5);
}
/* ... */

